--- a/saie/web-app/reports/correlatividades.jrxml
+++ b/saie/web-app/reports/correlatividades.jrxml
@@ -3,22 +3,22 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<style name="table" isDefault="false">
+	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="table_TH" isDefault="false" mode="Opaque" backcolor="#F0F8FF">
+	<style name="table_TH" mode="Opaque" backcolor="#F0F8FF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="table_CH" isDefault="false" mode="Opaque" backcolor="#BFE1FF">
+	<style name="table_CH" mode="Opaque" backcolor="#BFE1FF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="table_TD" isDefault="false" mode="Opaque" backcolor="#FFFFFF">
+	<style name="table_TD" mode="Opaque" backcolor="#FFFFFF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
@@ -29,6 +29,11 @@
 		</parameter>
 		<field name="descripcion" class="java.lang.String"/>
 		<field name="materias" class="java.util.Collection"/>
+	</subDataset>
+	<subDataset name="Table Dataset 2">
+		<parameter name="SUBREPORT_DIR" class="java.lang.String"/>
+		<field name="codigo" class="java.lang.String"/>
+		<field name="denominacion" class="java.lang.String"/>
 	</subDataset>
 	<parameter name="carrera" class="java.lang.String"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
@@ -83,7 +88,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:columnFooter height="30" rowSpan="1"/>
-						<jr:detailCell height="64" rowSpan="1">
+						<jr:detailCell height="129" rowSpan="1">
 							<box>
 								<pen lineWidth="0.25"/>
 								<topPen lineWidth="0.25"/>
@@ -117,7 +122,7 @@
 								<text><![CDATA[Materias]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell height="64" rowSpan="1">
+						<jr:detailCell height="129" rowSpan="1">
 							<box>
 								<pen lineWidth="0.25"/>
 								<topPen lineWidth="0.25"/>
@@ -126,13 +131,56 @@
 								<rightPen lineWidth="0.25"/>
 							</box>
 							<subreport>
-								<reportElement x="0" y="0" width="400" height="64"/>
+								<reportElement x="0" y="0" width="456" height="64"/>
 								<subreportParameter name="SUBREPORT_DIR">
 									<subreportParameterExpression><![CDATA[$P{SUBREPORT_DIR}]]></subreportParameterExpression>
 								</subreportParameter>
 								<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{materias})]]></dataSourceExpression>
 								<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"correlatividades_materias.jasper")]]></subreportExpression>
 							</subreport>
+							<componentElement>
+								<reportElement key="table 1" x="0" y="64" width="456" height="64"/>
+								<jr:table>
+									<datasetRun subDataset="Table Dataset 2">
+										<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.JREmptyDataSource(1)]]></dataSourceExpression>
+									</datasetRun>
+									<jr:column width="90">
+										<jr:tableHeader height="30"/>
+										<jr:tableFooter height="30"/>
+										<jr:columnHeader height="30"/>
+										<jr:columnFooter height="30"/>
+										<jr:detailCell height="20"/>
+									</jr:column>
+									<jr:column width="90">
+										<jr:tableHeader height="30"/>
+										<jr:tableFooter height="30"/>
+										<jr:columnHeader height="30"/>
+										<jr:columnFooter height="30"/>
+										<jr:detailCell height="20"/>
+									</jr:column>
+									<jr:column width="90">
+										<jr:tableHeader height="30"/>
+										<jr:tableFooter height="30"/>
+										<jr:columnHeader height="30"/>
+										<jr:columnFooter height="30"/>
+										<jr:detailCell height="20"/>
+									</jr:column>
+									<jr:column width="90">
+										<jr:tableHeader height="30"/>
+										<jr:tableFooter height="30"/>
+										<jr:columnHeader height="30"/>
+										<jr:columnFooter height="30"/>
+										<jr:detailCell height="20"/>
+									</jr:column>
+									<jr:column width="90">
+										<jr:tableHeader height="30"/>
+										<jr:tableFooter height="30"/>
+										<jr:columnHeader height="30"/>
+										<jr:columnFooter height="30"/>
+										<jr:detailCell height="20"/>
+									</jr:column>
+								</jr:table>
+							</componentElement>
 						</jr:detailCell>
 					</jr:column>
 				</jr:table>
