--- a/saie/web-app/reports/correlatividades.jrxml
+++ b/saie/web-app/reports/correlatividades.jrxml
@@ -3,22 +3,22 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<style name="table">
+	<style name="table" isDefault="false">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="table_TH" mode="Opaque" backcolor="#F0F8FF">
+	<style name="table_TH" isDefault="false" mode="Opaque" backcolor="#F0F8FF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="table_CH" mode="Opaque" backcolor="#BFE1FF">
+	<style name="table_CH" isDefault="false" mode="Opaque" backcolor="#BFE1FF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="table_TD" mode="Opaque" backcolor="#FFFFFF">
+	<style name="table_TD" isDefault="false" mode="Opaque" backcolor="#FFFFFF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
@@ -70,7 +70,6 @@
 						<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{niveles})]]></dataSourceExpression>
 					</datasetRun>
 					<jr:column width="52">
-						<jr:tableFooter height="30" rowSpan="1"/>
 						<jr:columnHeader height="30" rowSpan="1">
 							<box>
 								<pen lineWidth="0.25"/>
@@ -87,7 +86,6 @@
 								<text><![CDATA[Nivel]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:columnFooter height="30" rowSpan="1"/>
 						<jr:detailCell height="129" rowSpan="1">
 							<box>
 								<pen lineWidth="0.25"/>
@@ -131,56 +129,13 @@
 								<rightPen lineWidth="0.25"/>
 							</box>
 							<subreport>
-								<reportElement x="0" y="0" width="456" height="64"/>
+								<reportElement x="0" y="0" width="456" height="129"/>
 								<subreportParameter name="SUBREPORT_DIR">
 									<subreportParameterExpression><![CDATA[$P{SUBREPORT_DIR}]]></subreportParameterExpression>
 								</subreportParameter>
 								<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{materias})]]></dataSourceExpression>
 								<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"correlatividades_materias.jasper")]]></subreportExpression>
 							</subreport>
-							<componentElement>
-								<reportElement key="table 1" x="0" y="64" width="456" height="64"/>
-								<jr:table>
-									<datasetRun subDataset="Table Dataset 2">
-										<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.JREmptyDataSource(1)]]></dataSourceExpression>
-									</datasetRun>
-									<jr:column width="90">
-										<jr:tableHeader height="30"/>
-										<jr:tableFooter height="30"/>
-										<jr:columnHeader height="30"/>
-										<jr:columnFooter height="30"/>
-										<jr:detailCell height="20"/>
-									</jr:column>
-									<jr:column width="90">
-										<jr:tableHeader height="30"/>
-										<jr:tableFooter height="30"/>
-										<jr:columnHeader height="30"/>
-										<jr:columnFooter height="30"/>
-										<jr:detailCell height="20"/>
-									</jr:column>
-									<jr:column width="90">
-										<jr:tableHeader height="30"/>
-										<jr:tableFooter height="30"/>
-										<jr:columnHeader height="30"/>
-										<jr:columnFooter height="30"/>
-										<jr:detailCell height="20"/>
-									</jr:column>
-									<jr:column width="90">
-										<jr:tableHeader height="30"/>
-										<jr:tableFooter height="30"/>
-										<jr:columnHeader height="30"/>
-										<jr:columnFooter height="30"/>
-										<jr:detailCell height="20"/>
-									</jr:column>
-									<jr:column width="90">
-										<jr:tableHeader height="30"/>
-										<jr:tableFooter height="30"/>
-										<jr:columnHeader height="30"/>
-										<jr:columnFooter height="30"/>
-										<jr:detailCell height="20"/>
-									</jr:column>
-								</jr:table>
-							</componentElement>
 						</jr:detailCell>
 					</jr:column>
 				</jr:table>
