--- a/saie/web-app/reports/carrera/carrerasreporte.jrxml
+++ b/saie/web-app/reports/carrera/carrerasreporte.jrxml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="ISO-8859-1"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="carrerasreporte" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
@@ -66,9 +66,9 @@
 				<text><![CDATA[Denominación]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="216" y="2" width="72" height="15"/>
+				<reportElement x="216" y="2" width="125" height="15"/>
 				<textElement textAlignment="Center">
-					<font fontName="Arial" size="9" isBold="true"/>
+					<font fontName="Arial" size="9" isBold="true" isPdfEmbedded="false"/>
 				</textElement>
 				<text><![CDATA[Duración (Años)]]></text>
 			</staticText>
