--- a/saie/web-app/reports/preinscripcion/reportepreinscripcion.jrxml
+++ b/saie/web-app/reports/preinscripcion/reportepreinscripcion.jrxml
@@ -2,37 +2,121 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="carrerasreporte" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.1"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="126"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["C:\\Users\\Andrea\\Documents\\workspace-sts-2.3.3.M2\\saie\\web-app\\reports\\carrera\\"]]></defaultValueExpression>
 	</parameter>
+	<field name="[0].alumno.apellido" class="java.lang.String"/>
+	<field name="[0].alumno.nombre" class="java.lang.String"/>
+	<field name="[1]" class="java.util.Collection"/>
+	<field name="[0].carrera.denominacion" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="45" splitType="Stretch">
+		<band height="49" splitType="Stretch">
 			<staticText>
-				<reportElement x="187" y="0" width="190" height="20"/>
+				<reportElement x="184" y="0" width="190" height="20"/>
 				<textElement textAlignment="Center">
 					<font fontName="Arial" size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Listado de Preinscripciones]]></text>
+				<text><![CDATA[Cristian, necesito el título]]></text>
 			</staticText>
 		</band>
 	</title>
-	<pageHeader>
-		<band height="18"/>
-	</pageHeader>
 	<detail>
-		<band height="50" splitType="Prevent"/>
+		<band height="100" splitType="Prevent">
+			<subreport>
+				<reportElement x="0" y="47" width="555" height="10"/>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[1]})]]></dataSourceExpression>
+				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"reportepreinscripcion_detallematerias.jasper")]]></subreportExpression>
+			</subreport>
+			<staticText>
+				<reportElement x="0" y="15" width="421" height="13"/>
+				<textElement>
+					<font fontName="Courier New" size="10"/>
+				</textElement>
+				<text><![CDATA[SOLICITA LA MATRICULACION EN LAS SIGUIENTES MATERIAS DE LA CARRERA]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="0" y="28" width="247" height="18"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{[0].carrera.denominacion}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="0" y="46" width="555" height="1"/>
+			</line>
+			<textField>
+				<reportElement x="0" y="0" width="421" height="10"/>
+				<textElement>
+					<font fontName="Courier New" size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[('Quien suscribe, ').concat($F{[0].alumno.apellido}).concat(' ').concat($F{[0].alumno.nombre})]]></textFieldExpression>
+			</textField>
+		</band>
+		<band height="100">
+			<textField>
+				<reportElement x="0" y="26" width="247" height="18"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{[0].carrera.denominacion}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="0" y="44" width="555" height="1"/>
+			</line>
+			<staticText>
+				<reportElement x="0" y="13" width="421" height="13"/>
+				<textElement>
+					<font fontName="Courier New" size="10"/>
+				</textElement>
+				<text><![CDATA[SOLICITA LA MATRICULACION EN LAS SIGUIENTES MATERIAS DE LA CARRERA]]></text>
+			</staticText>
+			<subreport>
+				<reportElement x="0" y="45" width="555" height="10"/>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[1]})]]></dataSourceExpression>
+				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"reportepreinscripcion_detallematerias.jasper")]]></subreportExpression>
+			</subreport>
+			<textField>
+				<reportElement x="0" y="3" width="421" height="10"/>
+				<textElement>
+					<font fontName="Courier New" size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[('Quien suscribe, ').concat($F{[0].alumno.apellido}).concat(' ').concat($F{[0].alumno.nombre})]]></textFieldExpression>
+			</textField>
+		</band>
+		<band height="100">
+			<textField>
+				<reportElement x="0" y="23" width="247" height="18"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{[0].carrera.denominacion}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="0" y="41" width="555" height="1"/>
+			</line>
+			<subreport>
+				<reportElement x="0" y="42" width="555" height="10"/>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[1]})]]></dataSourceExpression>
+				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"reportepreinscripcion_detallematerias.jasper")]]></subreportExpression>
+			</subreport>
+			<staticText>
+				<reportElement x="0" y="13" width="421" height="13"/>
+				<textElement>
+					<font fontName="Courier New" size="10"/>
+				</textElement>
+				<text><![CDATA[SOLICITA LA MATRICULACION EN LAS SIGUIENTES MATERIAS DE LA CARRERA]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="0" y="3" width="421" height="10"/>
+				<textElement>
+					<font fontName="Courier New" size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[('Quien suscribe, ').concat($F{[0].alumno.apellido}).concat(' ').concat($F{[0].alumno.nombre})]]></textFieldExpression>
+			</textField>
+		</band>
 	</detail>
-	<columnFooter>
-		<band height="45" splitType="Stretch"/>
-	</columnFooter>
-	<pageFooter>
-		<band height="54" splitType="Stretch"/>
-	</pageFooter>
-	<summary>
-		<band height="42" splitType="Stretch"/>
-	</summary>
 </jasperReport>
