--- a/saie/web-app/css/menu/flickr/default.css
+++ b/saie/web-app/css/menu/flickr/default.css
@@ -28,7 +28,7 @@
 
 ul.dropdown {
  padding-bottom: 1px;
- background: url(../../../images/flickr/pattern1.png) 0 100% repeat-x;
+ background: url(../../../images/menu/flickr/pattern1.png) 0 100% repeat-x;
  font: bold 13px/normal Arial, Helvetica, sans-serif;
 }
 
