--- a/saie/web-app/reports/aula/aulasreporte.jrxml
+++ b/saie/web-app/reports/aula/aulasreporte.jrxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="carrerasreporte" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.1"/>
+	<property name="ireport.zoom" value="1.610510000000001"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="60"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["C:\\Users\\Andrea\\Documents\\workspace-sts-2.3.3.M2\\saie\\web-app\\reports\\carrera\\"]]></defaultValueExpression>
 	</parameter>
+	<parameter name="nombreinstitucion" class="java.lang.String"/>
+	<parameter name="direccioninstitucion" class="java.lang.String"/>
+	<parameter name="telefonoinstitucion" class="java.lang.String"/>
 	<field name="nombre" class="java.lang.String"/>
 	<field name="cupo" class="java.lang.Number"/>
 	<field name="localizacion" class="java.lang.String"/>
@@ -15,25 +18,35 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="69" splitType="Stretch">
+		<band height="36" splitType="Stretch">
 			<staticText>
-				<reportElement x="194" y="38" width="190" height="20"/>
+				<reportElement x="157" y="13" width="190" height="20"/>
 				<textElement textAlignment="Center">
 					<font fontName="Arial" size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Listado de Aulas]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="377" y="0" width="178" height="20"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreinstitucion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="375" y="22" width="180" height="11"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{direccioninstitucion}.concat(' - ').concat($P{telefonoinstitucion})]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="18">
-			<staticText>
-				<reportElement x="200" y="0" width="125" height="15"/>
-				<textElement textAlignment="Center">
-					<font fontName="Arial" size="9" isBold="true" isPdfEmbedded="false"/>
-				</textElement>
-				<text><![CDATA[Cupo]]></text>
-			</staticText>
+		<band height="15">
+			<rectangle>
+				<reportElement x="0" y="0" width="555" height="12" backcolor="#CCCCCC"/>
+			</rectangle>
 			<staticText>
 				<reportElement x="57" y="0" width="57" height="15"/>
 				<textElement textAlignment="Center">
@@ -54,6 +67,13 @@
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Código]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="200" y="0" width="125" height="15"/>
+				<textElement textAlignment="Center">
+					<font fontName="Arial" size="9" isBold="true" isPdfEmbedded="false"/>
+				</textElement>
+				<text><![CDATA[Cupo]]></text>
 			</staticText>
 		</band>
 	</pageHeader>
@@ -95,14 +115,25 @@
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch">
-			<rectangle>
-				<reportElement x="138" y="11" width="555" height="12" backcolor="#CCCCCC"/>
-			</rectangle>
-		</band>
+		<band height="45" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch"/>
+		<band height="13" splitType="Stretch">
+			<staticText>
+				<reportElement x="218" y="0" width="39" height="11"/>
+				<textElement textAlignment="Center">
+					<font size="8"/>
+				</textElement>
+				<text><![CDATA[Página Nº ]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="257" y="0" width="100" height="11"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+		</band>
 	</pageFooter>
 	<summary>
 		<band height="42" splitType="Stretch"/>
